[tool.poetry]
name = "crapi"
version = "0.0.0"
description = "Custom Reaction API"
authors = ["William McKinnerney <git@williammck.net>"]
license = "MIT"

[tool.poetry.dependencies]
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
Flask-WTF = "^0.15.1"
Flask-Session = "^0.4.0"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
"discord.py" = "^1.7.3"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.26.1"
psycopg2 = "^2.9.1"
python = "^3.9"
redis = "^3.5.3"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
flake8 = "^3.9.2"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-quotes = "^3.2.0"
mccabe = "^0.6.1"
mypy = "^0.910"
pep8-naming = "^0.12.0"
pre-commit = "^2.13.0"
types-Flask = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
