[tool.poetry]
name = "crapi"
version = "0.0.0"
description = "Custom Reaction API"
authors = ["William McKinnerney <git@williammck.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
Flask-WTF = "^0.15.1"
Flask-Session = "^0.4.0"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.1"
redis = "^3.5.3"
"discord.py" = "^1.7.3"
Flask-Discord = "^0.1.64"
requests-oauthlib = "^1.3.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.26.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
